test/fixtures/error/09-d-ts-call/input.d.ts
import mint from "mintz";

export const x = mint<"a">();
